2005-10-02  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Fixes SVG animation support in Safari/WebKit.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5132

        * WebCore+SVG/dom_kdomnodetreewrapper.cpp:
        (KDOMNodeTreeWrapperImpl::attach): setup kcanvasviewquartz
        (KDOMNodeTreeWrapperImpl::detach): tear down kcanvasviewquartz
        * WebCore+SVG/dom_kdomnodetreewrapper.h:
        * kcanvas/device/quartz/KCanvasViewQuartz.h:
        * kcanvas/device/quartz/KCanvasViewQuartz.mm: fix spaces
        (KCanvasViewQuartz::KCanvasViewQuartz):
        (KCanvasViewQuartz::~KCanvasViewQuartz):
        (KCanvasViewQuartz::view):
        (KCanvasViewQuartz::setView):
        (KCanvasViewQuartz::renderObject): alternative to view
        (KCanvasViewQuartz::setRenderObject):
        (KCanvasViewQuartz::invalidateCanvasRect):
        (KCanvasViewQuartz::viewToCanvasMatrix):
        (KCanvasViewQuartz::canvasSizeChanged):
        (KCanvasViewQuartz::viewHeight):
        (KCanvasViewQuartz::viewWidth):

2005-10-02  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by eseidel.

        Fix XSLT to preserve document.URL.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5219

        * khtml/xsl/xslt_processorimpl.cpp:
        (DOM::XSLTProcessorImpl::documentFromXMLDocPtr):

2005-10-02  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Fix crash when encountering XML processing directives w/ KDOM:
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5238

        * ksvg2/svg/SVGDocumentImpl.cpp:
        (SVGDocumentImpl::recalcStyleSelector): null check.

2005-10-02  Eric Seidel  <eseidel@apple.com>

        Removing unused SVG source files.

        * WebCore.xcodeproj/project.pbxproj:
        * ksvg2/ecma/Constructors.cpp: Removed.
        * ksvg2/ecma/Constructors.h: Removed.

2005-10-02  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.
